apps/nextjs-hello-world/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
  - port: 3000
    targetPort: 3000
