apps/nextjs-hello-world/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-hello-world
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:
  - host: dev.127.0.0.1.nip.io
    http:
      paths:
      - path: /(nextjs-hello-world.*)
        pathType: Prefix
        backend:
          service:
            name: nextjs-hello-world
            port:
              number: 3000
